# orderbook-contract

./: .env.example  .gitignore  Cargo.toml  Forc.toml  LICENSE  README.md  build.sh  fuel-toolchain.toml  tokens.json
market-contract/: Cargo.toml  Forc.toml
market-contract/src/: data_structures.sw  errors.sw  events.sw  interface.sw  main.sw  math.sw
market-contract/src/data_structures/: account.sw  asset_type.sw  balance.sw  limit_type.sw  math.sw  order.sw  order_change.sw  order_type.sw  user_volume.sw
market-contract/tests/: setup.rs
market-contract/tests/functions/core/: batch_fulfill.rs  cancel_order.rs  deposit.rs  fulfill_order_many.rs  match_order_many.rs  match_order_pair.rs  match_orders.rs  mod.rs  open_order.rs  set_epoch.rs  set_fee.rs  set_matcher_fee.rs  set_protocol_fee.rs  withdraw.rs  withdraw_protocol_fee.rs  withdraw_protocol_fees.rs
market-contract/tests/functions/info/: account.rs  config.rs  fee.rs  matcher_fee.rs  mod.rs  order.rs  order_id.rs  protocol_fee.rs  protocol_fee_amount.rs  protocol_fee_user.rs  protocol_fee_user_amount.rs  total_protocol_fee.rs  user_orders.rs
market-contract/tests/setup/: mod.rs
market-contract/tests/utils/: setup.rs
market-contract/tests/utils/interface/: core.rs  info.rs
market-registry/: Cargo.toml  Forc.toml
market-registry/src/: errors.sw  main.sw
market-registry/tests/functions/core/: register_market.rs  unregister_market.rs
market-registry/tests/setup/: mod.rs
orderbook-contract/: Cargo.toml  Forc.toml
orderbook-contract/src/: events.sw  main.sw
orderbook-contract/tests/: harness.rs
orderbook-contract/tests/functions/core/: register_market.rs  unregister_market.rs
orderbook-contract/tests/functions/info/: config.rs  mod.rs  registered_markets.rs
orderbook-contract/tests/setup/: mod.rs
scripts/: Cargo.toml  README.md  cancel_order.rs  create_accounts_with_tokens.rs  create_market.rs  create_order.rs  deploy.rs  fill_orderbook.rs  get_order_change_events_by_order.rs  init_orderbook_system.rs  init_system.rs  manual_match.rs  match_in_pairs.rs  match_in_pairs_multicall.rs  match_orders.rs  order_by_id.rs
spark-cli/: Cargo.toml  README.md
spark-cli/src/: main.rs  utils.rs
spark-cli/src/commands/: cli.rs  mod.rs
spark-cli/src/commands/batch/: cli.rs  deploy_all.rs  deploy_eth_usdc_proxy.rs  deploy_ezeth_usdc_proxy.rs  deploy_fuel_eth_proxy.rs  deploy_fuel_usdc_proxy.rs  deploy_proxy.rs  deploy_psycho_usdc_proxy.rs  deploy_pzeth_usdc_proxy.rs  deploy_teth_tusdc_impl.rs  deploy_teth_tusdc_proxy.rs  deploy_trump_eth_proxy.rs  deploy_usdc_usdt_proxy.rs  deploy_usdf_usdc_proxy.rs  deploy_usdt_eth_proxy.rs  deploy_usdt_usdc_proxy.rs  deploy_weth_usdc_proxy.rs  mod.rs
spark-cli/src/commands/book/: cli.rs  config.rs  deploy.rs  markets.rs  mod.rs  register.rs  unregister.rs
spark-cli/src/commands/core/: batch_fulfill.rs  cancel_order.rs  cancel_small_order.rs  cli.rs  close_order.rs  deploy.rs  deposit.rs  deposit_for.rs  fulfill_many.rs  match_many.rs  match_pair.rs  mod.rs  open_market_order.rs  open_order.rs  set_epoch.rs  set_fee.rs  set_matcher_fee.rs  set_min_order_price.rs  set_min_order_size.rs  set_paused.rs  set_protocol_fee.rs  set_proxy_target.rs  set_store_order_change_info.rs  withdraw.rs  withdraw_protocol_fee.rs  withdraw_to_market.rs
spark-cli/src/commands/info/: account.rs  cli.rs  config.rs  epoch.rs  fee.rs  market_order.rs  matcher_fee.rs  min_order_price.rs  min_order_size.rs  mod.rs  order.rs  order_id.rs  paused.rs  protocol_fee.rs  protocol_fee_amount.rs  protocol_fee_user.rs  protocol_fee_user_amount.rs  proxy_owner.rs  proxy_target.rs  store_order_change_info.rs  total_protocol_fee.rs  user_orders.rs
spark-cli/src/commands/registry/: cli.rs  config.rs  deploy.rs  markets.rs  register.rs  unregister.rs
spark-cli/src/commands/upgrade/: cli.rs  mod.rs  upgrade_eth_usdc_proxy.rs  upgrade_ezeth_usdc_proxy.rs  upgrade_fuel_eth_proxy.rs  upgrade_fuel_usdc_proxy.rs  upgrade_psycho_usdc_proxy.rs  upgrade_pzeth_usdc_proxy.rs  upgrade_teth_tusdc_proxy.rs  upgrade_usdc_usdt_proxy.rs  upgrade_usdf_usdc_proxy.rs  upgrade_usdt_eth_proxy.rs  upgrade_usdt_usdc_proxy.rs  upgrade_weth_usdc_proxy.rs
spark-market/: Cargo.toml  Forc.toml
spark-market-sdk/: Cargo.toml  README.md
spark-market-sdk/src/: lib.rs
spark-market/src/: contract.rs  data_structures.sw  errors.sw  events.sw  interface.sw  main.sw  math.sw
spark-market/src/data_structures/: asset_type.sw  balance.sw  limit_type.sw  match_result.sw  math.sw  order.sw  protocol_fee.sw
spark-market/tests/functions/core/: cancel_order.rs  cancel_small_order.rs  deposit.rs  deposit_for.rs  deposit_withdraw_script_test.rs  fulfill_order_many.rs  initialize_ownership.rs  match_order_many.rs  match_order_pair.rs  mod.rs  open_market_order.rs  open_order.rs  pause.rs  set_epoch.rs  set_matcher_fee.rs  set_min_order_price.rs  set_min_order_size.rs  set_protocol_fee.rs  set_store_order_change_info.rs  transfer_ownership.rs  withdraw.rs  withdraw_to_market.rs
spark-market/tests/functions/info/: config.rs  min_order_price.rs  min_order_size.rs  mod.rs  order.rs  order_id.rs  protocol_fee.rs
spark-market/tests/setup/: mod.rs
spark-proxy/: Cargo.toml  Forc.toml
spark-proxy-sdk/: Cargo.toml  README.md
spark-proxy-sdk/src/: lib.rs
spark-proxy/src/: main.sw
spark-proxy/tests/functions/core/: mod.rs  set_proxy_owner.rs  set_proxy_target.rs
spark-proxy/tests/functions/info/: mod.rs  (+2 more)
spark-proxy/tests/setup/: mod.rs
spark-registry-sdk/: Cargo.toml  README.md
spark-registry-sdk/src/: lib.rs
tests/: Cargo.toml  deploy_test.rs  fulfill_script_test.rs  harness.rs  main_test.rs  main_test_btc.rs  main_test_eth.rs  main_test_uni.rs  match.rs  match_orders.rs  match_script_test.rs  open_quote_token_order_cancel_by_reverse_order.rs  test_utils.rs
tests/indexer_test/: indexer_parse_test.rs  indexer_query_test.rs  mod.rs  query.json
tests/match_test/: match_orders.rs  match_orders_cases.rs  match_test.rs  mod.rs  test_utils.rs
tests/utils/: check_balance.rs  match_orders_case_utils.rs  mod.rs  setup.rs
(+104 files in other folders)
