[workspace]
resolver = "1"
members = [
    "spark-cli", 
    "spark-market-sdk", 
    "spark-market",
    "spark-proxy-sdk", 
    "spark-proxy",
    "spark-registry-sdk",
    "spark-registry"
]

[workspace.package]
authors = ["ComposabilityLabs"]
version = "0.6.5"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82.0"

[workspace.dependencies]
anyhow = "1.0.92"
fuels = { version = "0.66.9", features = ["fuel-core-lib"] }
tokio = { version = "1.41.0", features = ["rt", "macros"] }

