[package]
name = "market-registry"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
spark-market-sdk = { path = "../spark-market-sdk" }
spark-registry-sdk = { path = "../spark-registry-sdk" }
tokio = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
