[package]
name = "spark-cli"
description = "Spark Rust CLI for Market & Orderbook contract interactions"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }
dotenv = "0.15.0"
fuels = { workspace = true }
spark-market-sdk = { version = "0.2.1" }
spark-orderbook-sdk = { version = "0.2.1" }
tokio = { workspace = true }
