[package]
name = "spark-cli"
description = "Spark Rust CLI for Market & Orderbook contract interactions"
version = "0.6.10"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
repository = "https://github.com/compolabs/orderbook-contract"
readme = "README.md"
keywords = ["fuel", "sdk", "spark", "cli", "orderbook"]

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.28", features = ["derive"] }
dotenv = "0.15.0"
fuels = { workspace = true }
spark-market-sdk = { version = "0.6.10" }
spark-registry-sdk = { version = "0.6.4" }
spark-proxy-sdk = { version = "0.0.2" }
tokio = { workspace = true }

[[bin]]
name = "spark-cli"
path = "src/main.rs"
