[package]
name = "spark-market-sdk"
description = "Spark Rust SDK for Market contract interaction"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
include = [
    "market-contract/out/release/*",
    "src/lib.rs",
    "Cargo.toml",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
rand = "0.8.5"
tokio = { workspace = true }
