[package]
name = "spark-market-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "SDK for interacting with the Spark Market"
repository = "https://github.com/ComposabilityLabs/spark-market-sdk"
readme = "README.md"
keywords = ["fuel", "sdk", "spark", "dex"]
categories = ["fuel", "blockchain", "utilities"]
include = [
    "spark-market/out/release/*",
    "src/lib.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
rand = "0.8.5"
tokio = { workspace = true }
