[package]
name = "spark-market-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "SDK for interacting with the Spark Market"
repository = "https://github.com/compolabs/orderbook-contract"
readme = "README.md"
keywords = ["fuel", "sdk", "spark", "market", "orderbook"]
include = [
    "spark-market/out/release/*",
    "spark-proxy/out/release/*",
    "src/lib.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
rand = "0.8.5"
tokio = { workspace = true }
