[package]
name = "spark-proxy"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
spark-proxy-sdk = { path = "../spark-proxy-sdk" }
tokio = { workspace = true }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
