[package]
name = "spark-registry-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
description = "SDK for interacting with the Spark Registry"
repository = "https://github.com/compolabs/orderbook-contract"
readme = "README.md"
keywords = ["fuel", "sdk", "spark", "registry", "orderbook"]
include = [
    "spark-registry/out/release/*",
    "src/lib.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
rand = "0.8.5"
tokio = { workspace = true }
