[package]
name = "tests"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
fuels = { workspace = true }
spark-market-sdk = { path = "../spark-market-sdk" }
src20_sdk = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "main_test"
path = "main_test.rs"

[[test]]
name = "match_orders"
path = "match_orders.rs"